// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 1`] = `
Object {
  "hfile": Object {
    "dir": "myAlbum",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 2`] = `
Array [
  Object {
    "ISO": null,
    "album": Object {
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "myAlbum",
      "id": 1,
      "inode": "Zmlyc3RteUFsYnVt",
      "parentDir": "",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "albumId": 3,
    "aperture": null,
    "birthtime": 0,
    "createDate": null,
    "createdAt": 2016-01-01T00:00:00.000Z,
    "ctime": 0,
    "dir": "myAlbum",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": "bXlBbGJ1bVBIT1RPMS5qcGc=",
    "make": null,
    "model": null,
    "mtime": 0,
    "parentDir": "",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - album file 3`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "myAlbum",
    "id": 1,
    "inode": "Zmlyc3RteUFsYnVt",
    "parentDir": "",
    "photos": Array [
      Object {
        "ISO": null,
        "album": undefined,
        "albumId": 3,
        "aperture": null,
        "birthtime": 0,
        "createDate": null,
        "createdAt": 2016-01-01T00:00:00.000Z,
        "ctime": 0,
        "dir": "myAlbum",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": "bXlBbGJ1bVBIT1RPMS5qcGc=",
        "make": null,
        "model": null,
        "mtime": 0,
        "parentDir": "",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
        "updatedAt": 2016-01-01T00:00:00.000Z,
      },
    ],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 1`] = `
Object {
  "hfile": Object {
    "dir": "",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 2`] = `
Array [
  Object {
    "ISO": null,
    "album": Object {
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "",
      "id": 1,
      "inode": "c2VydmVyZmlyc3Q=",
      "parentDir": "",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "albumId": 2,
    "aperture": null,
    "birthtime": 0,
    "createDate": null,
    "createdAt": 2016-01-01T00:00:00.000Z,
    "ctime": 0,
    "dir": "",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": "Zmlyc3RQSE9UTzEuanBn",
    "make": null,
    "model": null,
    "mtime": 0,
    "parentDir": "",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - root file 3`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [
      Object {
        "ISO": null,
        "album": undefined,
        "albumId": 2,
        "aperture": null,
        "birthtime": 0,
        "createDate": null,
        "createdAt": 2016-01-01T00:00:00.000Z,
        "ctime": 0,
        "dir": "",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": "Zmlyc3RQSE9UTzEuanBn",
        "make": null,
        "model": null,
        "mtime": 0,
        "parentDir": "",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
        "updatedAt": 2016-01-01T00:00:00.000Z,
      },
    ],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 1`] = `
Object {
  "hfile": Object {
    "dir": "myAlbum/mySubAlbum",
    "file": "PHOTO1.jpg",
    "source": "first",
  },
  "root": "/home/lelouch/first",
}
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 2`] = `
Array [
  Object {
    "ISO": null,
    "album": Object {
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "myAlbum/mySubAlbum",
      "id": 1,
      "inode": "bXlBbGJ1bW15U3ViQWxidW0=",
      "parentDir": "myAlbum",
      "photos": undefined,
      "source": "first",
      "sourceLk": undefined,
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "albumId": 3,
    "aperture": null,
    "birthtime": 0,
    "createDate": null,
    "createdAt": 2016-01-01T00:00:00.000Z,
    "ctime": 0,
    "dir": "myAlbum/mySubAlbum",
    "file": "PHOTO1.jpg",
    "id": 1,
    "inode": "bXlTdWJBbGJ1bVBIT1RPMS5qcGc=",
    "make": null,
    "model": null,
    "mtime": 0,
    "parentDir": "myAlbum",
    "processedAperture": null,
    "processedShutter": null,
    "searchResults": undefined,
    "shutter": null,
    "size": 10,
    "source": "first",
    "status": "not_processed",
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;

exports[`[NewFile] Scanning files should save a new entry and emit an event - sub-album file 3`] = `
Array [
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "myAlbum/mySubAlbum",
    "id": 1,
    "inode": "bXlBbGJ1bW15U3ViQWxidW0=",
    "parentDir": "myAlbum",
    "photos": Array [
      Object {
        "ISO": null,
        "album": undefined,
        "albumId": 3,
        "aperture": null,
        "birthtime": 0,
        "createDate": null,
        "createdAt": 2016-01-01T00:00:00.000Z,
        "ctime": 0,
        "dir": "myAlbum/mySubAlbum",
        "file": "PHOTO1.jpg",
        "id": 1,
        "inode": "bXlTdWJBbGJ1bVBIT1RPMS5qcGc=",
        "make": null,
        "model": null,
        "mtime": 0,
        "parentDir": "myAlbum",
        "processedAperture": null,
        "processedShutter": null,
        "searchResults": undefined,
        "shutter": null,
        "size": 10,
        "source": "first",
        "status": "not_processed",
        "updatedAt": 2016-01-01T00:00:00.000Z,
      },
    ],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyZmlyc3Q=",
    "parentDir": "",
    "photos": Array [],
    "source": "first",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./first",
      "id": 1,
      "source": "first",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
  Object {
    "createdAt": 2016-01-01T00:00:00.000Z,
    "dir": "",
    "id": 1,
    "inode": "c2VydmVyc2Vjb25k",
    "parentDir": "",
    "photos": Array [],
    "source": "second",
    "sourceLk": Object {
      "albums": undefined,
      "createdAt": 2016-01-01T00:00:00.000Z,
      "dir": "./second",
      "id": 1,
      "source": "second",
      "updatedAt": 2016-01-01T00:00:00.000Z,
    },
    "updatedAt": 2016-01-01T00:00:00.000Z,
  },
]
`;
